Just a commit to register a minor change.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="vegetarian_supreme">VEGETARIAN SUPREME</string>
     <string name="brazilian_treat">BRAZILIAN TREAT</string>
     <string name="subtotal">Subtotal</string>
+    <string name="drinks">Drinks</string>
 </resources>
