This commit registers that the app compiles with the 4 initial screens.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="brazilian_treat">BRAZILIAN TREAT</string>
     <string name="subtotal">Subtotal</string>
     <string name="drinks">Drinks</string>
+    <string name="coke">Coke</string>
+    <string name="lemonade">Lemonade</string>
+    <string name="ginger_beer">Ginger Beer</string>
+    <string name="orange_juice">Orange Juice</string>
 </resources>
