Just completed the order summary fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="lemonade">Lemonade</string>
     <string name="ginger_beer">Ginger Beer</string>
     <string name="orange_juice">Orange Juice</string>
+    <string name="order_summary">Order Summary</string>
+    <string name="send_order">Send Order</string>
 </resources>
