Sorted out the label for each screen so it shows the correct title that the user is on.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="vegetarian_supreme">VEGETARIAN SUPREME</string>
     <string name="brazilian_treat">BRAZILIAN TREAT</string>
     <string name="subtotal">Subtotal</string>
-    <string name="drinks">Drinks</string>
+    <string name="drinks">DRINKS</string>
     <string name="coke">Coke</string>
     <string name="lemonade">Lemonade</string>
     <string name="ginger_beer">Ginger Beer</string>
