Just added the subtotal for the pizza, drinks and summary screen. The problem is that Deep pan crust not default and subtotal not change on pizza screen when pizza is selected.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="beef_special">BEEF SPECIAL</string>
     <string name="vegetarian_supreme">VEGETARIAN SUPREME</string>
     <string name="brazilian_treat">BRAZILIAN TREAT</string>
-    <string name="subtotal">Subtotal</string>
+    <string name="subtotal">Subtotal %s</string>
     <string name="drinks">DRINKS</string>
     <string name="coke">Coke</string>
     <string name="lemonade">Lemonade</string>
