Just added in an implicit intent for the send order function. For what ever reason the apply function in the summary activity wouldnt recognise the summaryFragment variable that created in a data tag so had to put in a binding statement and use setOnClickListener instead on using the onClick attribute. It still works.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="orange_juice">Orange Juice</string>
     <string name="order_summary">Order Summary</string>
     <string name="send_order">Send Order</string>
+    <string name="new_pizza_order">New Pizza Order</string>
+    <string name="order_details">Crust: %1$s crust \n Pizza: %2$s \nDrinks: %3$s \n Total: %4$s \n\n Thank you!</string>
 </resources>
