--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">PizzaApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_of_pizza_place">Jimmy\'s Tasty Pizza</string>
+    <string name="title_of_pizza_place">\n Jimmy\'s \n Tasty \n Pizza</string>
     <string name="start_button">CLICK TO ENTER</string>
     <string name="home">Jimmy\'\s Pizza Home</string>
     <string name="deep_pan">Deep Pan</string>
