changed app bar lable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="order_summary">Order Summary</string>
     <string name="send_order">Send Order</string>
     <string name="new_pizza_order">New Pizza Order</string>
+    <string name="home_title">Home</string>
     <string name="order_details">Crust: %1$s crust \n Pizza: %2$s \nDrinks: %3$s \n Total: %4$s \n\n Thank you!</string>
 </resources>
